--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
-    "hono": "^4.9.8"
+    "hono": "^4.9.8",
+    "zod": "3.0.0"
   },
   "devDependencies": {
     "@types/bun": "latest"
