--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "hono": "^4.9.8",
-    "zod": "3.0.0"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@types/bun": "latest"
