--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
     "target": "esnext",
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
+    // "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "noEmit": true,
     "paths": {
       "@/*": ["src/*"]
