feat: implement CRUD APIs, error handling middleware, enhance task validation, and add logging functionality

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dev": "bun run --hot src/index.ts",
     "db:setup": "bun run src/db/setup.ts",
     "db:migrate": "bun run src/db/setup.ts",
+    "db:seed": "bun run scripts/seed-database.ts",
     "test": "bun test",
     "test:watch": "bun test --watch"
   },
